--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,7 @@
 # Do not detect
 *.cc -linguist-detectable
 *.cpp -linguist-detectable
-*.cmake -linguist-vendored
+*.cmake -linguist-detectable
 
 # Detect
-*.dart linguist-detectable
+*.dart linguist-language=Dart
