--- a/.gitignore
+++ b/.gitignore
@@ -42,4 +42,8 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 
+# Chromedriver
+chromedriver-*/
+chromedriver*
+LICENSE.chromedriver
 
